basic html elements

--- a/Web/jul30_html/index.html
+++ b/Web/jul30_html/index.html
@@ -18,7 +18,7 @@
     <p>Utterly ruthless and without mercy, Zed is the leader of the Order of Shadow, an organization he created with the intent of militarizing Ionia's magical and martial traditions to drive out Noxian invaders. During the war, desperation led him to unlock...</p>
 
     <!-- image -->
-    <img src="Zed_0.jpg" alt="Default Zed Skin" width="800px">
+    <img src="Zed_0.jpg" alt="Default Zed Skin" width="800px" style="text-align: center;">
     <!-- using local path (relative path) -->
     <img src="imgs/Zed_38.jpg" alt="Favorite Zed skin" width="500px">
 
