intro to async and promises, fetch API

--- a/javascript/dec14_async_demo/aimlab-demo.html
+++ b/javascript/dec14_async_demo/aimlab-demo.html
@@ -14,6 +14,9 @@
             display: none;
             transform: rotate(45deg);
         }
+        * {
+            cursor: none;
+        }
     </style>
 </head>
 <body>
