search value on input, copy objects & arrays, spread operator

--- a/Web/dec22_dynamic_rendering/index.html
+++ b/Web/dec22_dynamic_rendering/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1 id="title">League of Legends</h1>
 
+    <div id="search-container">
+        <input type="text" id="search" placeholder="Search champion...">
+    </div>
+
     <div id="container">
         <!-- placeholder to attach new elements -->
         <!-- <div class="champion">
