vanilla version, intro to react

--- a/todo-app/vanilla/index.html
+++ b/todo-app/vanilla/index.html
@@ -17,6 +17,15 @@
         <!-- <li>learn javascript</li> -->
     </ul>
 
+    <button onclick="wassup()">Wassup</button>
+
     <script src="app.js"></script>
+
+    <script>
+        function wassup() {
+            console.log('wassupppp');
+            
+        }
+    </script>
 </body>
 </html>
